[project]
name = "jlc-comfyui-nodes"
version = "1.0.0"
description = "Custom workflow-oriented nodes for ComfyUI focused on Flux pipelines, LoRA experimentation, ControlNet utilities, and advanced inpainting/outpainting workflows."
authors = [
    { name = "J. L. Córdova", email = "jose.l.cordova@gmail.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"

keywords = [
    "comfyui",
    "stable-diffusion",
    "flux",
    "lora",
    "controlnet",
    "inpainting",
    "outpainting",
    "workflow",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Multimedia :: Graphics",
]

[project.urls]
Homepage = "https://github.com/Damkohler/jlc-comfyui-nodes"
Repository = "https://github.com/Damkohler/jlc-comfyui-nodes"
Issues = "https://github.com/Damkohler/jlc-comfyui-nodes/issues"

[tool.comfy]
PublisherId = "damkohler"
DisplayName = "JLC ComfyUI Nodes"
Icon = "https://raw.githubusercontent.com/Damkohler/jlc-comfyui-nodes/main/assets/icons/jlc-comfyui-nodes_Logo-0512.png"
Category = "nodes"
Homepage = "https://github.com/Damkohler/jlc-comfyui-nodes"